Implementation of transaction and change balance