@@ -1,6 +1,6 @@
 package com.br.pagamentosimplificado.processadortransacao.infrastructure.transaction.impl;
 
-import com.br.pagamentosimplificado.processadortransacao.application.transaction.TransactionDataDTO;
+import com.br.pagamentosimplificado.processadortransacao.application.dto.TransactionDataDTO;
 import com.br.pagamentosimplificado.processadortransacao.application.transaction.service.TransacationService;
 import com.br.pagamentosimplificado.processadortransacao.domain.transaction.Transaction;
 import com.br.pagamentosimplificado.processadortransacao.infrastructure.account.AccountRepository;
@@ -10,6 +10,7 @@ import org.springframework.stereotype.Service;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
+import java.util.List;
 import java.util.UUID;
 
 @Service
@@ -19,17 +20,18 @@ public class TransactionServiceImpl implements TransacationService {
     private AccountRepository accountRepository;
 
     private TransactionRepository transactionRepository;
+
     @Override
     public void processTransaction(TransactionDataDTO transactionDataDTO) {
         var transaction = Transaction.builder()
                 .payerAccountId(transactionDataDTO.idAccountPayer()).receiverAccountId(transactionDataDTO.idAccountReceiver())
                 .transactionValue(transactionDataDTO.value()).moment(LocalDateTime.now())
                 .build();
-        var transactSaved = transactionRepository.save(transaction);
-        var accountPayer = accountRepository.findById(UUID.fromString(transactionDataDTO.idAccountPayer())).get();
-        var accountReceiver = accountRepository.findById(UUID.fromString(transactionDataDTO.idAccountReceiver())).get();
-        accountPayer.pay(transactionDataDTO.value());
-        accountReceiver.receivePayment(transactionDataDTO.value());
-        accountRepository.saveAll(Arrays.asList(accountPayer, accountReceiver));
+        transactionRepository.save(transaction);
+        var payerAccount = accountRepository.findById(UUID.fromString(transaction.getPayerAccountId())).get();
+        var receiverAccount = accountRepository.findById(UUID.fromString(transaction.getReceiverAccountId())).get();
+        payerAccount.pay(transaction.getTransactionValue());
+        receiverAccount.receivePayment(transaction.getTransactionValue());
+        accountRepository.saveAll(List.of(payerAccount, receiverAccount));
     }
 }
